# warnings-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  clazychecks.cpp  clazychecks.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.cpp  settings.h  settings.ui  settingswindow.cpp  settingswindow.h  tab.cpp  tab.h  vscode.code-workspace  warning-viewer.pro  warning.h  warningmodel.cpp  warningmodel.h  warningproxymodel.cpp  warningproxymodel.h  warningtypefilterproxymodel.cpp  warningtypefilterproxymodel.h
